--- a/.github/workflows/test_GHA.yml
+++ b/.github/workflows/test_GHA.yml
@@ -18,15 +18,39 @@ on:
         # The data type of the input
         type: string
 
+      name2:
+        # Friendly description to be shown in the UI instead of 'name'
+        description: 'Person to greet'
+        # Default value if no value is explicitly provided
+        default: 'Kostas'
+        # Input has to be provided for the workflow to run
+        required: true
+        # The data type of the input
+        type: string
+
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  job1:
+    name: Job 1
+    runs-on: ubuntu-latest  # You can specify the runner you want to use
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+    - name: Job 1 Step
+      run: |
+        - name: Send greeting
+          run: echo "Hello ${{ inputs.name }}"
+          echo "Running Job 1"
+
+  job2:
+    name: Job 2
+    runs-on: ubuntu-latest  # You can specify the runner you want to use
+
+    steps:
+    - name: Job 2 Step
+      run: |
+        run: echo "Hello ${{ inputs.name2 }}"
+        echo "Running Job 2"
+
+        
+        
