--- a/.github/workflows/test_GHA.yml
+++ b/.github/workflows/test_GHA.yml
@@ -37,20 +37,18 @@ jobs:
 
     steps:
     - name: Job 1 Step
-      run: |
-        - name: Send greeting
-          run: echo "Hello ${{ inputs.name }}"
-          echo "Running Job 1"
+      run:  echo "Hello ${{ inputs.name }}"
+       
 
   job2:
     name: Job 2
+    needs: job1
     runs-on: ubuntu-latest  # You can specify the runner you want to use
 
     steps:
     - name: Job 2 Step
-      run: |
-        run: echo "Hello ${{ inputs.name2 }}"
-        echo "Running Job 2"
+      run:  echo "Hello ${{ inputs.name2 }}"
+    
 
         
         
