--- a/.github/workflows/clean_merged_branches.yml
+++ b/.github/workflows/clean_merged_branches.yml
@@ -18,13 +18,8 @@ jobs:
 
       - name: Get merged branches
         run: |
-          git for-each-ref --format="%(refname:short) %(upstream:track)" refs/heads | \
-          while read branch track; do
-            if [ "$track" = "gone" ]; then
-              echo "Branch $branch is merged and can be deleted."
-              git push --delete origin "$branch"
-            fi
-          done
+         git branch --merged  | grep -v 'master$'| while read branch; do  echo "Processing branch: $branch"   
+         done
 
       - name: Cleanup completed
         run: echo "Cleanup completed."
