--- a/.github/workflows/clean_merged_branches.yml
+++ b/.github/workflows/clean_merged_branches.yml
@@ -18,7 +18,8 @@ jobs:
 
       - name: Get merged branches
         run: |
-         git branch --merged  | grep -v 'master$'| while read branch; do  echo "Processing branch: $branch"   
+         git branch --merged  | grep -v 'master$'| while read branch; do
+         echo "Processing branch: $branch"   
          done
 
       - name: Cleanup completed
