--- a/.github/workflows/test_GHA.yml
+++ b/.github/workflows/test_GHA.yml
@@ -34,6 +34,7 @@ jobs:
   job1:
     name: Job 1
     runs-on: ubuntu-latest  # You can specify the runner you want to use
+    environment: test-approval
 
     steps:
     - uses: m-s-abeer/update-gha-summary-with-workflow-inputs@v1
